# elin-not_random_quest

./: .editorconfig  .gitignore  Makefile  elin-not_random_quest.sln  pyproject.toml
.github/: labels.toml
Not_Random_Quest/: package.xml
src/csharp/: Console.cs  NotRandomQuest.csproj  Plugin.cs  Utiliry.cs
src/csharp/Properties/: AssemblyInfo.cs
